# serializer version: 1
# name: test_entities[button.samsung_tv_number_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_number_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Number 5',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Number 5',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'num_5',
    'unique_id': '01JTEST0000000000000000000_num_5',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_number_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Number 5',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_number_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_red-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_red',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Red',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Red',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'red',
    'unique_id': '01JTEST0000000000000000000_red',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_red-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Red',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_red',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_entities[button.samsung_tv_source-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.samsung_tv_source',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Source',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Source',
    'platform': 'samsung_infrared',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'source',
    'unique_id': '01JTEST0000000000000000000_source',
    'unit_of_measurement': None,
  })
# ---
# name: test_entities[button.samsung_tv_source-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Samsung TV Source',
    }),
    'context': <ANY>,
    'entity_id': 'button.samsung_tv_source',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
